--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Final Project</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/fontawesome.min.css" />
 	<link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/fonts.css" />
@@ -14,38 +14,33 @@
 	<link rel="stylesheet" href="css/media.css">
 </head>
 <body>
-    <section class="top">
+    <header class="header">
         <div class="wrapper">
-            <header class="header">
-                <div class="logotype">
-                        <svg width="181" height="36" viewBox="0 0 181 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.046875 35V0.875H10.5469C13.5469 0.875 16.2266 1.55469 18.5859 2.91406C20.9609 4.25781 22.8125 6.17969 24.1406 8.67969C25.4688 11.1641 26.1328 13.9922 26.1328 17.1641V18.7344C26.1328 21.9062 25.4766 24.7266 24.1641 27.1953C22.8672 29.6641 21.0312 31.5781 18.6562 32.9375C16.2812 34.2969 13.6016 34.9844 10.6172 35H0.046875ZM7.07812 6.57031V29.3516H10.4766C13.2266 29.3516 15.3281 28.4531 16.7812 26.6562C18.2344 24.8594 18.9766 22.2891 19.0078 18.9453V17.1406C19.0078 13.6719 18.2891 11.0469 16.8516 9.26562C15.4141 7.46875 13.3125 6.57031 10.5469 6.57031H7.07812Z" fill="#FED330" class="svg__d"/>
-                            <path d="M51.7969 20.2109H38.2969V29.3516H54.1406V35H31.2656V0.875H54.0938V6.57031H38.2969V14.7031H51.7969V20.2109ZM68.9531 21.3125L65.2969 25.25V35H58.2656V0.875H65.2969V16.3438L68.3906 12.1016L77.0859 0.875H85.7344L73.6172 16.0391L86.0859 35H77.7188L68.9531 21.3125ZM116.016 18.7109C116.016 22.0703 115.422 25.0156 114.234 27.5469C113.047 30.0781 111.344 32.0312 109.125 33.4062C106.922 34.7812 104.391 35.4688 101.531 35.4688C98.7031 35.4688 96.1797 34.7891 93.9609 33.4297C91.7422 32.0703 90.0234 30.1328 88.8047 27.6172C87.5859 25.0859 86.9688 22.1797 86.9531 18.8984V17.2109C86.9531 13.8516 87.5547 10.8984 88.7578 8.35156C89.9766 5.78906 91.6875 3.82812 93.8906 2.46875C96.1094 1.09375 98.6406 0.40625 101.484 0.40625C104.328 0.40625 106.852 1.09375 109.055 2.46875C111.273 3.82812 112.984 5.78906 114.188 8.35156C115.406 10.8984 116.016 13.8438 116.016 17.1875V18.7109ZM108.891 17.1641C108.891 13.5859 108.25 10.8672 106.969 9.00781C105.688 7.14844 103.859 6.21875 101.484 6.21875C99.125 6.21875 97.3047 7.14062 96.0234 8.98438C94.7422 10.8125 94.0938 13.5 94.0781 17.0469V18.7109C94.0781 22.1953 94.7188 24.8984 96 26.8203C97.2812 28.7422 99.125 29.7031 101.531 29.7031C103.891 29.7031 105.703 28.7812 106.969 26.9375C108.234 25.0781 108.875 22.375 108.891 18.8281V17.1641ZM133.758 22.5078H128.156V35H121.125V0.875H133.805C137.836 0.875 140.945 1.77344 143.133 3.57031C145.32 5.36719 146.414 7.90625 146.414 11.1875C146.414 13.5156 145.906 15.4609 144.891 17.0234C143.891 18.5703 142.367 19.8047 140.32 20.7266L147.703 34.6719V35H140.156L133.758 22.5078ZM128.156 16.8125H133.828C135.594 16.8125 136.961 16.3672 137.93 15.4766C138.898 14.5703 139.383 13.3281 139.383 11.75C139.383 10.1406 138.922 8.875 138 7.95312C137.094 7.03125 135.695 6.57031 133.805 6.57031H128.156V16.8125ZM171.047 27.9688H158.719L156.375 35H148.898L161.602 0.875H168.117L180.891 35H173.414L171.047 27.9688ZM160.617 22.2734H169.148L164.859 9.5L160.617 22.2734Z" fill="#202020" class="svg__ecora"/>
-                            </svg>
-                </div>
+            <div class="header__block">
+                <a class="logo" href="#"><h1 class="logo__title">DECORA</h1></a>
                 <nav class="menu">
                     <span class="btn-mobile">
                         <i class="fas fa-bars"></i>
                     </span>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Products</a></li>
-                        <li><a href="#">Contacts</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about-us">About Us</a></li>
+                        <li><a href="#products">Products</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
                 <div class="icons">
-                        <a href="" class="icons__color"><i class="fas fa-search fa-lg"></i></a>
-                        <a href="#" class="icons__color icons__item" >
-                            <i class="fas fa-shopping-cart fa-lg"></i>
-                            <div class="badge">1</div>
-                        </a>
-                        <a href="" class="icons__color"><i class="fas fa-user fa-lg"></i></a>
+                    <a href="" class="icons__color"><i class="fas fa-search fa-lg"></i></a>
+                    <a href="#" class="icons__color icons__item" >
+                        <i class="fas fa-shopping-cart fa-lg"></i>
+                        <div class="badge">1</div>
+                    </a>
+                    <a href="" class="icons__color"><i class="fas fa-user fa-lg"></i></a>
                 </div>
-            </header>
+            </div>
         </div>
-    </section>
-    <section class="categories">
+    </header>
+    <section class="categories" id="home">
         <div class="wrapper">
             <div class="flexbox">
                 <div class="info">
@@ -59,10 +54,10 @@
             </div>
         </div>
     </section>
-    <section class="furniture">
+    <section class="about-us" id="about-us">
         <div class="wrapper">
             <div class="info-1">
-                <h2 class="info-1__subtitle">WELLCOME TO DEKORA FURNITURE</h2>
+                <h2 class="info-1__subtitle">WELCOME TO DEKORA FURNITURE</h2>
                 <p class="info-1__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore<br> magna aliqua Ut enim ad minim veniam quis.</p>
             </div>
             <div class="decor">
@@ -72,9 +67,8 @@
                             <img  src="images/lights.png" alt="">
                         </div>
                     </div>
-                 <figcaption class="decor__text">Decorative lights</figcaption>
+                <figcaption class="decor__text">Decorative lights</figcaption>
                 </figure>
-
                 <figure class="decor__box">
                     <div class="decor__img">
                         <div class="decor__pic">
@@ -83,7 +77,6 @@
                     </div>
                     <figcaption class="decor__text">Flower pot</figcaption>
                 </figure>
-
                 <figure class="decor__box">
                     <div class="decor__img">
                         <div class="decor__pic">
@@ -93,7 +86,6 @@
                     <figcaption class="decor__text">Decorative cabinet</figcaption>
                 </figure>
             </div>
-
             <div class="grid">
                 <a class="link link__one" href="#">
                     <img class="link__img" src="images/item-1.png" alt="">
@@ -109,18 +101,17 @@
                         <span class="link__btn">SHOP NOW</span>
                     </div>
                 </a>
-                 <a class="link link__two" href="#">
-                     <img class="link__img-2" src="images/item-3.png" alt="">
-                     <div class="link__wrap-1">
+                <a class="link link__two" href="#">
+                    <img class="link__img-2" src="images/item-3.png" alt="">
+                    <div class="link__wrap-1">
                         <p class="link__text-1">Lamp<br> collection</p>
                         <span class="link__btn">SHOP NOW</span>
                     </div>
-                 </a>
-             </div>
+                </a>
+            </div>
         </div>
     </section>
-
-    <section class="Products">
+    <section class="products" id="products">
         <div class="wrapper">
             <div class="info-2">
                 <h2 class="info-2__subtitle">FEATURE PRODUCTS CREATE BY DEKORA</h2>
@@ -130,7 +121,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-1.png" alt="">
-                    </div> 
+                    </div>
                     <div class="item__discount">
                             <p class="item__total">-20%</p>
                     </div>
@@ -141,7 +132,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-2.png" alt="">
-                    </div> 
+                    </div>
                     <div class="item__discount">
                             <p class="item__total">-30%</p>
                     </div>
@@ -152,7 +143,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-3.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Phasellus tellus quam</p>
                     <p class="item__price">$29.00</p>
                     <span class="item__btn">SHOP NOW</span>
@@ -160,7 +151,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-4.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Praesent sed eros</p>
                     <p class="item__price">$15.99</p>
                     <span class="item__btn">SHOP NOW</span>
@@ -168,7 +159,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-5.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Donec fringilla ipsum</p>
                     <p class="item__price">$37.99</p>
                     <span class="item__btn">SHOP NOW</span>
@@ -176,7 +167,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-6.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Donec vitae ipsum</p>
                     <p class="item__price">$29.50</p>
                     <span class="item__btn">SHOP NOW</span>
@@ -184,7 +175,7 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-7.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Phasellus tellus quam</p>
                     <p class="item__price">$29.00</p>
                     <span class="item__btn">SHOP NOW</span>
@@ -192,18 +183,15 @@
                 <a href="" class="item">
                     <div class="item__picture">
                         <img src="images/products-8.png" alt="">
-                    </div> 
+                    </div>
                     <p class="item__bottom-text">Praesent sed eros</p>
                     <p class="item__price">$15.99</p>
                     <span class="item__btn">SHOP NOW</span>
                 </a>
             </div>
-
         </div>
-
     </section>
-
-    <section class="last-section">
+    <section class="contacts" id="contacts">
         <div class="wrapper">
             <div class="info-3">
                 <h2 class="info-3__subtitle">Do you have any questions?</h2>
@@ -213,15 +201,15 @@
                 <div class="flexbox-2">
                     <div class="infooo">
                         <div class="input">
-                            <input class="input__name" type="text" placeholder="Name">
-                        </div> 
-                        <div class="input"> 
-                            <input class="input__phone" type="text" placeholder="Phone">
-                        </div>  
-                        <div class="input">
-                            <input class="input__email" type="text" placeholder="Email">
+                            <input class="input__name" type="text" placeholder="Name" required>
                         </div>
-                    </div>   
+                        <div class="input">
+                            <input class="input__phone" type="text" placeholder="Phone">
+                        </div>
+                        <div class="input">
+                            <input class="input__email" type="email" placeholder="Email" required>
+                        </div>
+                    </div>
                     <div class="textarea">
                         <textarea class="textarea__message" name="message" placeholder="Message"></textarea>
                     </div>
@@ -232,12 +220,10 @@
             </form>
         </div>
     </section>
-
     <footer class="footer">
         <div class="footer__text">
-            <p> © 2019 Made with <span><img src="images/heart.png" alt=""></span>All Rights Reserved.</p>
+            <p> © 2019 Made with <span><img class="footer__heart" src="images/heart.png" alt=""></span>All Rights Reserved.</p>
         </div>
     </footer>
-
-</body>
+    </body>
 </html>
