feat: add hamburger menu

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div class="wrapper">
             <div class="header__block">
                 <a class="logo" href="#"><h1 class="logo__title">DECORA</h1></a>
+                <span class="hamburger" id="hamburger">
+                    <span class="hamburger__line"></span>
+                </span>
                 <nav class="menu">
-                    <span class="btn-mobile">
-                        <i class="fas fa-bars"></i>
-                    </span>
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about-us">About Us</a></li>
@@ -225,5 +225,6 @@
             <p> © 2019 Made with <span><img class="footer__heart" src="images/heart.png" alt=""></span>All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="script.js"></script>
     </body>
 </html>
